2013-09-11  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r155519.
        http://trac.webkit.org/changeset/155519
        https://bugs.webkit.org/show_bug.cgi?id=121174

        Included regression test fails, and an existing test started
        to crash (Requested by ap on #webkit).

        * fast/events/mouseenterleave-detached-element-expected.txt: Removed.
        * fast/events/mouseenterleave-detached-element.html: Removed.

2013-09-10  Simon Fraser  <simon.fraser@apple.com>

        REGRESSION (143483): overflow:hidden doesn't quash big repaints from text-indent: -9999px
        https://bugs.webkit.org/show_bug.cgi?id=121137

        Reviewed by Ryosuke Niwa.
        
        Text-based repaint test, and test for compositing layer geometry.

        * compositing/geometry/negative-text-indent-with-overflow-hidden-layer-expected.txt: Added.
        * compositing/geometry/negative-text-indent-with-overflow-hidden-layer.html: Added.
        * fast/repaint/negative-text-indent-with-overflow-hidden-expected.txt: Added.
        * fast/repaint/negative-text-indent-with-overflow-hidden.html: Added.

2013-09-11  Chris Fleizach  <cfleizach@apple.com>

        AX: WebKit exposes AXTitleUIElement incorrectly on checkboxes and radio buttons
        https://bugs.webkit.org/show_bug.cgi?id=121039

        Reviewed by Sam Weinig.

        * accessibility/label-for-control-hittest-expected.txt: Removed.
        * accessibility/label-for-control-hittest.html: Removed.
              We no longer need this test since we are not combining label + control into one element anymore.
        * accessibility/radio-button-group-members.html:
              Rewrite this test to be more modern (don't just dump attributes). 
              Instead test for what we want to know (whether radio button group members can identify their siblings)
        * accessibility/radio-button-title-label-expected.txt:
        * accessibility/radio-button-title-label.html: